# SimplePH

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  pytest.ini  requirements-dev.txt  run_docker.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docker.yml
python/: README.md  dambreak_old.py  plot_couette_flow.py  plot_ldc_velocity_field.py  plot_ldc_velocity_profile.py  plot_poiseuille_flow.py  run_all.sh  run_couette_flow.py  run_dambreak.py  run_dambreak_buchner.py  run_dambreak_pysph.py  run_dambreak_templ.py  run_dambreak_zhang2017.py  run_dambreak_zhang2017_xsph.py  run_hydrostatic_tank.py  run_lid_driven_cavity.py  run_lid_driven_cavity_tv.py  run_poiseuille_flow.py  run_poiseuille_flow_av.py  run_poiseuille_flow_parallel.py  run_poiseuille_flow_qs.py  run_poiseuille_flow_re100.py  run_poiseuille_flow_tv.py  run_test.py  run_test_dambreak.py
python/latex/: references.bib  report.tex
src/: CMakeLists.txt  bindings.cpp
src/boundary/: boundary_calculator.cpp  boundary_calculator.hpp
src/core/: particle.hpp
src/correction/: correction_calculator.cpp  correction_calculator.hpp
src/density/: density_calculator.cpp  density_calculator.hpp  density_method.hpp  density_summation.hpp
src/force/: force_calculator.cpp  force_calculator.hpp
src/integrator/: euler_integrator.hpp  integrator.hpp  tv_verlet_integrator.hpp  velocityverlet_integrator.hpp  verlet_integrator.hpp
src/neighbor/: cell_grid.cpp  cell_grid.hpp  grid.hpp  grid_old.hpp  grid_sorted.hpp
src/operators/: Operator.hpp  PressureViscousForce.cpp  PressureViscousForce.hpp
src/pressure/: pressure_calculator.cpp  pressure_calculator.hpp
src/solver/: SolverState.hpp  solver.cpp  solver.hpp  solver_options.hpp
src/sph/: eos.hpp  kernel.hpp
src/utils/: terminal.hpp  timestep_calculator.hpp  utils.hpp  vtk_writer.cpp  vtk_writer.hpp
tests/: README_TESTS.md  test_api.py  test_invariants.py  test_physical_flows.py  test_simpleph.py
